# schismviz

./: .gitignore  AGENTS.md  README-cli.md  README-viz.md  README.md  conda_build.sh  environment.yml  environment_dev.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-package-conda.yml  python-package-pip.yml  python-publish.yml
conda.recipe/: meta.yaml
examples/: .gitignore  batch_metrics_itp2024.yaml  helloschism_README.md  helloschism_output_config.yaml  helloschism_run_viz_examples.sh  helloschism_viz_config.yaml  schism_slr_studies.yaml  viz_config_example.yaml
schismviz/: __init__.py  __main__.py  _nc_utils.py  _version.py  calibplot.py  cli.py  datastore.py  out2dui.py  readers.py  schism_nc.py  schism_nc_reader.py  schism_plot_metrics.py  schismcalibplotui.py  schismstudy.py  schismui.py  session.py  suxarray.py  viz_cli.py  viz_commands.py
tests/: test_cli.py  test_readers.py  test_schism_nc.py  test_schismcalibplotui.py  test_schismui.py  test_suxarray.py
