[build-system]
requires = ["setuptools>=64.0", "wheel", "setuptools_scm[toml]>=7.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "schismviz/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
fallback_version = "0.1.0"

[project]
name = "schismviz"
dynamic = ["version"]
description = "holoviews visualizations for schism"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Nicky Sandhu", email = "psandhu@water.ca.gov"}
]
keywords = ["schism", "visualization", "holoviews"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "click>=8.0",
    "numpy>=1.20",
    "pandas>=1.3",
    "xarray>=0.18",
    "netCDF4>=1.5",
    "pyyaml>=5.0",
    "scipy>=1.7",
    "holoviews>=1.14",
    "hvplot>=0.7",
    "panel>=0.13",
    "param>=1.12",
    "bokeh>=2.4",
    "cartopy>=0.20",
    "shapely>=1.7",
    "geopandas>=0.10",
    "diskcache>=5.0",
    "colorcet>=3.0",
    "datashader>=0.13",
    "dask>=2022.1",
    "spatialpandas>=0.4",
    "Pillow>=8.0",
    "networkx>=2.6",
    "uxarray>=2023.1",
]

[project.scripts]
schismviz = "schismviz.cli:main"

[project.urls]
Homepage = "https://github.com/cadwrdeltamodeling/schismviz"
Documentation = "https://github.com/cadwrdeltamodeling/schismviz#readme"
"Bug Reports" = "https://github.com/cadwrdeltamodeling/schismviz/issues"
"Source Code" = "https://github.com/cadwrdeltamodeling/schismviz"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["schismviz*"]
exclude = ["tests*", "docs*", "notebooks*"]
